<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="company_name">Udacity</string>
    <string name="company_adress_street">2465 Latham St.</string>
    <string name="company_adress_city">Mountain View, CA 94043</string>
    <string name="company_phone_number">(+1) 650-555-5555</string>
    <string name="company_website">www.udacity.com</string>
    <string name="background_image_content_description">Man walking up the ladder to Udacity knowledge</string>
</resources>
