<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.helloandroid.MainActivity">

    <ImageView
        android:id="@+id/ImageView"
        android:contentDescription="@string/background_image_content_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView2"
        android:padding="@dimen/layout_pading_small"
        android:text="@string/company_name"
        android:textColor="@color/fontColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView3"
        android:paddingBottom="@dimen/layout_pading_small"
        android:paddingStart="@dimen/layout_pading_small"
        android:paddingLeft="@dimen/layout_pading_small"
        android:text="@string/company_adress_street"
        android:textColor="@color/fontColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView4"
        android:paddingBottom="@dimen/layout_pading_small"
        android:paddingStart="@dimen/layout_pading_small"
        android:paddingLeft="@dimen/layout_pading_small"
        android:text="@string/company_adress_city"
        android:textColor="@color/fontColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView5"
        android:autoLink="phone"
        android:paddingBottom="@dimen/layout_pading_small"
        android:paddingStart="@dimen/layout_pading_small"
        android:paddingLeft="@dimen/layout_pading_small"
        android:text="@string/company_phone_number"
        android:textColorLink="@color/fontColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:autoLink="web"
        android:paddingBottom="@dimen/layout_pading_medium"
        android:paddingStart="@dimen/layout_pading_small"
        android:paddingLeft="@dimen/layout_pading_small"
        android:text="@string/company_website"
        android:textColorLink="@color/fontColor"
        android:textStyle="bold" />

</RelativeLayout>